# django-oauth-emailbackend

./: .gitignore  LICENSE  MANIFEST.in  README.md  packaging_pipy.py  pyproject.toml
docs/: gmail.md
oauth_emailbackend/: requirements.txt
oauth_emailbackend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
oauth_emailbackend/oauth_emailbackend/: admin.py  apps.py  backends.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
oauth_emailbackend/oauth_emailbackend/migrations/: 0001_initial.py  0002_remove_emailhost_api_client_id_and_more.py  0003_alter_emailhost_api_token_and_more.py  0004_provider_emailhost_provider_and_more.py  0005_alter_emailhost_provider_alter_emailhost_send_method.py  0006_provider_created_provider_updated.py  0007_oauthapi_remove_emailhost_provider_and_more.py  0008_alter_oauthapi_options_remove_oauthapi_name_and_more.py  0009_alter_oauthapi_options_emailclient_delete_emailhost.py  0010_alter_emailclient_id_alter_emailclient_user.py  0011_remove_emailclient_api_token_and_more.py  0012_remove_oauthapi_secret_file_oauthapi_client_config.py  0013_alter_oauthapi_options_and_more.py  0014_alter_emailclient_user.py  0015_rename_next_token_refresh_date_emailclient_token_expiry.py  0016_remove_emailclient_user_emailclient_api_email_and_more.py  0017_rename_database_emailclient_using.py  0018_emailclient_debug.py  0019_emailclient_sender_name.py  0020_remove_sendhistory_body_sendhistory_raw_and_more.py  0021_remove_sendhistory_id_alter_sendhistory_message_id.py  0022_remove_sendhistory_category_remove_sendhistory_user.py  0023_sendhistory_error_message.py  0024_sendhistory_retry_count.py  0025_alter_sendhistory_success.py  0026_sendhistory_id_alter_sendhistory_message_id.py
oauth_emailbackend/oauth_emailbackend/providers/: README.md  __init__.py  gmail.py
oauth_emailbackend/oauth_emailbackend/templates/admin/oauth_emailbackend/emailclient/: change_form.html
oauth_emailbackend/oauth_emailbackend/templates/admin/oauth_emailbackend/emailhost/: change_form.html
oauth_emailbackend/oauth_emailbackend/templates/oauth_emailbackend/: callback.html
oauth_emailbackend/testapp/: forms.py  urls.py  views.py
oauth_emailbackend/testapp/templates/snippets/: messages.html
oauth_emailbackend/testapp/templates/testapp/: base.html  send-email.html
