[project]
name = "django-oauth-emailbackend"
version = "0.1"
authors = [
  { name="Sun-Yeon Lee", email="odop@youhasoft.com" },
]
description = "Django emailbackend with Celery that using IMAP and google OAuth api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0"
]
dependencies = [
  'Django>3.2.8',
  'celery>5.2',
  'google-api-python-client',
  'google-api-python-client',
  'google-authors',
  'google-auth-oauthlib',
  'google-auth-httplib2',
]


[project.urls]
Homepage = "https://github.com/youhasoft/django-oauth-emailbackend"
Issues = "https://github.com/youhasoft/django-oauth-emailbackend/issues"